--- a/public/css/adminpages/admin-orders.css
+++ b/public/css/adminpages/admin-orders.css
@@ -1,5 +1,3 @@
-@import '/public/css/adminpages/order-status.css';
-
 .admin-panel .admin-orders-panel .panel-heading {
   display: flex;
   justify-content: left;
@@ -90,109 +88,58 @@
   margin-top: 5px;
 }
 
-
 .admin-panel .admin-orders-plates .second-plate span {
   font-weight: 700;
   color: #fff;
 }
 
-.admin-panel .home-panel-orders {
-  margin-top: 50px;
-  background-color: #fff;
-  padding: 30px 5%;
-  border-radius: 10px;
-  margin-bottom: 20px;
-}
 
-.admin-panel .home-panel-orders h2 {
-  font-size: 20px;
-  font-weight: 700;
-}
 
-.admin-panel .home-panel-orders .new-orders {
-  margin-top: 20px;
-  width: 100%;
-}
 
-.admin-panel .home-panel-orders .new-orders thead {
-  border-bottom: 1px solid rgb(154, 154, 154);
-  font-size: 15px;
-  font-weight: 700;
-  text-align: left;
-}
 
-.admin-panel .home-panel-orders .new-orders thead tr {
-  height: 30px;
-}
 
-.admin-panel .home-panel-orders .new-orders tbody tr {
-  max-height: 50px;
-  height: 100%;
-  line-height: 50px;
-  border-bottom: 1px solid rgb(154, 154, 154);
-  color: rgb(154, 154, 154);
-  font-weight: 500;
-  font-size: 12px;
-  transition: 0.3s;
-}
-
-.admin-panel .home-panel-orders .new-orders tbody tr:hover {
-  color: rgb(51, 51, 51);
-  border-bottom: 1px solid rgb(51, 51, 51);
-}
-
-.admin-panel .home-panel-orders .new-orders tbody tr:last-child {
-  border-bottom: none;
-}
-
-.admin-panel .home-panel-orders .new-orders tbody tr.order-brief-info-section {
+.admin-panel .home-panel .home-panel-table tbody tr.order-brief-info-section {
   pointer-events: none;
 }
 
-
-
-
-
-.admin-panel .home-panel-orders .new-orders tbody tr.order-brief-info-section td .order-brief-info { 
+.admin-panel .home-panel .home-panel-table tbody tr.order-brief-info-section td .order-brief-info { 
   max-height: 0;
   line-height: 0;
   overflow: hidden;
   transition: 1s;
 }
 
-.admin-panel .home-panel-orders .new-orders tbody tr.order-brief-info-section.show {
+.admin-panel .home-panel .home-panel-table tbody tr.order-brief-info-section.show {
   pointer-events: none;
 }
 
-.admin-panel .home-panel-orders .new-orders tbody tr.order-brief-info-section.show td .order-brief-info { 
+.admin-panel .home-panel .home-panel-table tbody tr.order-brief-info-section.show td .order-brief-info { 
   max-height: 401px;
   line-height: 50px;
 }
 
 
 
-
-
-.admin-panel .home-panel-orders .new-orders tbody .order-brief-info-section td .order-brief-info .p-order-brief-info {
+.admin-panel .home-panel .home-panel-table tbody .order-brief-info-section td .order-brief-info .p-order-brief-info {
   font-size: 13px;
   color: rgb(154, 154, 154);
   font-weight: 500;
 }
 
-.admin-panel .home-panel-orders .new-orders tbody .order-brief-info-section td .order-brief-info .p-order-brief-info span {
+.admin-panel .home-panel .home-panel-table tbody .order-brief-info-section td .order-brief-info .p-order-brief-info span {
   color: rgb(51, 51, 51);
 }
 
-.admin-panel .home-panel-orders .new-orders tbody .order-brief-info-section td .order-brief-info {
+.admin-panel .home-panel .home-panel-table tbody .order-brief-info-section td .order-brief-info {
   display: flex;
   justify-content: space-around;
 }
 
-.admin-panel .home-panel-orders .new-orders tbody .order-brief-info .order-brief-info-last-orders #last-order {
+.admin-panel .home-panel .home-panel-table tbody .order-brief-info .order-brief-info-last-orders #last-order {
   pointer-events: all;
 }
 
-.admin-panel .home-panel-orders .new-orders tbody .order-brief-info .order-brief-info-last-orders #last-order:hover {
+.admin-panel .home-panel .home-panel-table tbody .order-brief-info .order-brief-info-last-orders #last-order:hover {
   cursor: pointer;
   color: rgb(51, 51, 51);
   font-weight: 500;
