--- a/views/admin-catalog.hbs
+++ b/views/admin-catalog.hbs
@@ -13,11 +13,11 @@
       <div class="search-by">
         <div class="search-by-id-number">
           <label>Артикул</label>
-          <input type="number" id="search-by-id">
+          <input type="number" id="search-by-product-id">
         </div>
         <div class="search-by-title">
           <label>Название</label>
-          <input type="text" id="search-by-title">
+          <input type="text" id="search-by-product-title">
         </div>
       </div>
     </div>
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <div class="search-home-panel-catalog">
+  <div class="search-home-panel">
     <table class="search-catalog-items">
       <thead>
         <tr>
@@ -62,7 +62,7 @@
     </table>
   </div>
 
-  <div class="home-panel-catalog">
+  <div class="home-panel">
     <h2>Каталог</h2>
     <div class="add-product-btn">
       <a href="/admin/product/add"><button class="status passing">Добавить</button></a>
@@ -73,7 +73,7 @@
       {{/each}}
     </div>
     {{#each categories}}
-    <table class="catalog-items">
+    <table class="home-panel-table">
       <thead>
         <tr>
           <th>Артикул</th>
@@ -92,12 +92,17 @@
           <td class="productQuantity">99</td>
           <td class="productPrice">{{price}}</td>
           <td>
-            <a href="/admin/product/{{id}}/edit"><button class="status passing">Изменить</button></a>
-            <form action="/admin/product/{{id}}/remove" method="POST">
-              <input type="hidden" name="_csrf" value="{{@root.csrf}}">
-              <input type="hidden" name="id" value="{{id}}">
-              <button typa="submit" class="status passing">Удалить</button>
-            </form>
+            <div class="td-element">
+              <a href="/admin/product/{{id}}/edit"><button class="status passing">Изменить</button></a>
+            </div>
+            <div class="td-element">
+              <form action="/admin/product/{{id}}/remove" method="POST">
+                <input type="hidden" name="_csrf" value="{{@root.csrf}}">
+                <input type="hidden" name="id" value="{{id}}">
+                <button typa="submit" class="status passing">Удалить</button>
+              </form>
+            </div>
+
           </td>
           <input id="imageUrl" type="hidden" name="img" value="/{{imageUrl}}">
         </tr>
