--- a/views/admin-orders.hbs
+++ b/views/admin-orders.hbs
@@ -15,23 +15,40 @@
           <label>Номер заказа</label>
           <input type="text">
         </div>
-        <div class="search-by-email">
+        <div class="search-by-order-email">
           <label>Email</label>
           <input type="text">
         </div>
-        <div class="search-by-phone">
+        <div class="search-by-order-phone">
           <label>Тел. номер</label><input type="number">
         </div>
       </div>
     </div>
   </div>
-  <div class="home-panel-orders">
-    <h2>Заказы</h2>
-    <table class="new-orders">
+
+  <div class="search-home-panel">
+    <table class="search-catalog-items">
       <thead>
         <tr>
           <th>Номер заказа</th>
-          <th>Имя</th>
+          <th>Email</th>
+          <th>Тел. номер</th>
+          <th>Стоимость</th>
+          <th>Действия</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="home-panel">
+    <h2>Заказы</h2>
+    <table class="home-panel-table">
+      <thead>
+        <tr>
+          <th>Номер заказа</th>
+          <th>Email</th>
           <th>Тел. номер</th>
           <th>Стоимость</th>
           <th>Действия</th>
@@ -41,13 +58,17 @@
         {{#if orders.length}}
         {{#each orders}}
         <tr class="order-row">
-          <td>{{id}}</td>
-          <td>{{name}} {{surname}}</td>
-          <td>{{phone}}</td>
+          <td class="orderId">{{id}}</td>
+          <td class="orderEmail">{{email}}</td>
+          <td class="orderPhone">{{phone}}</td>
           <td>{{totalCost}}</td>
           <td>
-            <button class="status {{status}}">{{status}}</button>
-            <a href="/admin/order/{{id}}" target="_blank"><button class="status passing">Перейти</button></a>
+            <div class="td-element">
+              <button class="status {{status}}">{{status}}</button>
+            </div>
+            <div class="td-element">
+              <a href="/admin/order/{{id}}" target="_blank"><button class="status passing">Перейти</button></a>
+            </div>
           </td>
         </tr>
         <tr class="order-brief-info-section">
