--- a/views/admin-user-profile.hbs
+++ b/views/admin-user-profile.hbs
@@ -82,9 +82,10 @@
       </div>
     </div>
   </div>
-  <div class="home-panel-orders">
+
+  <div class="home-panel">
     <h2>Заказы</h2>
-    <table class="new-orders">
+    <table class="home-panel-table">
       <thead>
         <tr>
           <th>Номер заказа</th>
@@ -103,8 +104,12 @@
           <td>{{phone}}</td>
           <td>{{totalCost}}</td>
           <td>
-            <button class="status {{status}}">{{status}}</button>
-            <a href="/admin/order/{{id}}" target="_blank"><button class="status passing">Перейти</button></a>
+            <div class="td-element">
+              <button class="status {{status}}">{{status}}</button>
+            </div>
+            <div class="td-element">
+              <a href="/admin/order/{{id}}" target="_blank"><button class="status passing">Перейти</button></a>
+            </div>
           </td>
         </tr>
         <tr class="order-brief-info-section">
