--- a/views/admin-users.hbs
+++ b/views/admin-users.hbs
@@ -11,15 +11,15 @@
     <div class="first-plate">
       <p class="icon"><i class="material-icons">search</i></p>
       <div class="search-by">
-        <div class="search-by-name">
+        <div class="search-by-user-name">
           <label>Имя</label>
           <input type="text">
         </div>
-        <div class="search-by-email">
+        <div class="search-by-user-email">
           <label>Email</label>
           <input type="text">
         </div>
-        <div class="search-by-phone">
+        <div class="search-by-user-phone">
           <label>Тел. номер</label><input type="number">
         </div>
       </div>
@@ -37,9 +37,26 @@
       </div>
     </div>
   </div>
-  <div class="home-panel-users">
+
+  <div class="search-home-panel">
+    <table class="search-catalog-items">
+      <thead>
+        <tr>
+          <th>Имя</th>
+          <th>Email</th>
+          <th>Тел. номер</th>
+          <th>Дата регистрации</th>
+          <th>Действия</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="home-panel">
     <h2>Пользователи</h2>
-    <table class="new-users">
+    <table class="home-panel-table">
       <thead>
         <tr>
           <th>Имя</th>
@@ -51,51 +68,58 @@
       </thead>
       <tbody>
         {{#if users.length}}
-          {{#each users}}
-            <tr class="user-row">
-            <td>{{name}} {{surname}}</td>
-            <td>{{email}}</td>
-            <td>{{phone}}</td>
-            <td>{{createdAt}}</td>
-            <td><a href="/admin/profile/{{id}}"><button class="status passing">Перейти</button></a></td>
-            </tr>
-            <tr class="user-brief-info-section">
-            <td colspan="5">
-              <div class="user-brief-info">
-                <div class="user-brief-info-contacts">
-                  <p class="p-user-brief-info" id="name">Имя: <span>{{name}} {{surname}}</span></p>
-                  <p class="p-user-brief-info">Email: <span>{{email}}</span></p>
-                  <p class="p-user-brief-info">Тел. номер: <span>{{phone}}</span></p>
-                  <p class="p-user-brief-info">Дата регистрации: <span>{{createdAt}}</span></p>
-                </div>
-                <div class="user-brief-info-address">
-                  <p class="p-user-brief-info">Страна: <span>{{counrty}}</span></p>
-                  <p class="p-user-brief-info">Город: <span>{{town}}</span></p>
-                  <p class="p-user-brief-info">Регион: <span>{{region}}</span></p>
-                  <p class="p-user-brief-info">Индекс: <span>{{zipcode}}</span></p>
-                </div>
-                <div class="user-brief-info-orders">
-                  <p class="p-user-brief-info">Заказы: <span>{{orders.length}}</span></p>
-                  <p class="p-user-brief-info" id="completed">Выполненные: <span>{{completedOrders}}</span></p>
-                  <p class="p-user-brief-info" id="rejected">Отмененные: <span>{{rejectedOrders}}</span></p>
-                  <p class="p-user-brief-info" id="processing">Текущие: <span>{{processingOrders}}</span></p>
-                </div>
-                <div class="user-brief-info-last-orders">
-                  <ul>
-                    {{#if orders.length}}
-                      {{#each orders}}
-                        <li>
-                          <a href="/admin/order/{{id}}" target="_blank"><p class="p-user-brief-info" id="last-order">Заказ №: <span>{{id}}</span> от <span>{{createdAt}}</span></a>             
-                          </p>
-                        </li>
-                      {{/each}}
-                    {{/if}}
-                  </ul>
-                </div>
+        {{#each users}}
+        <tr class="user-row">
+          <td class="userName">{{name}} {{surname}}</td>
+          <td class="userEmail">{{email}}</td>
+          <td class="userPhone">{{phone}}</td>
+          <td>{{createdAt}}</td>
+          <td>
+            <div class="td-element">
+              <a href="/admin/profile/{{id}}"><button class="status passing">Перейти</button></a>
+            </div>
+          </td>
+        </tr>
+        <tr class="user-brief-info-section">
+          <td colspan="5">
+            <div class="user-brief-info">
+              <div class="user-brief-info-contacts">
+                <p class="p-user-brief-info" id="name">Имя: <span>{{name}} {{surname}}</span></p>
+                <p class="p-user-brief-info">Email: <span>{{email}}</span></p>
+                <p class="p-user-brief-info">Тел. номер: <span>{{phone}}</span></p>
+                <p class="p-user-brief-info">Дата регистрации: <span>{{createdAt}}</span></p>
               </div>
-            </td>
-            </tr>
-          {{/each}}
+              <div class="user-brief-info-address">
+                <p class="p-user-brief-info">Страна: <span>{{counrty}}</span></p>
+                <p class="p-user-brief-info">Город: <span>{{town}}</span></p>
+                <p class="p-user-brief-info">Регион: <span>{{region}}</span></p>
+                <p class="p-user-brief-info">Индекс: <span>{{zipcode}}</span></p>
+              </div>
+              <div class="user-brief-info-orders">
+                <p class="p-user-brief-info">Заказы: <span>{{orders.length}}</span></p>
+                <p class="p-user-brief-info" id="completed">Выполненные: <span>{{completedOrders}}</span></p>
+                <p class="p-user-brief-info" id="rejected">Отмененные: <span>{{rejectedOrders}}</span></p>
+                <p class="p-user-brief-info" id="processing">Текущие: <span>{{processingOrders}}</span></p>
+              </div>
+              <div class="user-brief-info-last-orders">
+                <ul>
+                  {{#if orders.length}}
+                  {{#each orders}}
+                  <li>
+                    <a href="/admin/order/{{id}}" target="_blank">
+                      <p class="p-user-brief-info" id="last-order">Заказ №: <span>{{id}}</span> от
+                        <span>{{createdAt}}</span>
+                    </a>
+                    </p>
+                  </li>
+                  {{/each}}
+                  {{/if}}
+                </ul>
+              </div>
+            </div>
+          </td>
+        </tr>
+        {{/each}}
         {{/if}}
       <tbody>
     </table>
