--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -13,11 +13,7 @@
       <li><a href="/faq">FAQ</a></li>
       {{/if}}
       
-      {{#if isOrStatus}}
-      <li class="active"><a href="/order-status">Статус заказа</a></li>
-      {{else}}
-      <li><a href="/order-status">Статус заказа</a></li>
-      {{/if}}
+      <li class="check-status-btn">Статус заказа</li>
 
     </ul>
     <div class="login_cart">
