--- a/public/css/modals/status-check-modal.css
+++ b/public/css/modals/status-check-modal.css
@@ -38,7 +38,7 @@
   font-size: 30px;
 }
 
-.modal-bg .status-check-modal .forgot-info .p-input {
+.modal-bg .status-check-modal .order-number .p-input {
   text-align: left;
   font-weight: 500;
   text-transform: uppercase;
@@ -49,7 +49,7 @@
   margin-left: 5px;
 }
 
-.modal-bg .status-check-modal .forgot-info input {
+.modal-bg .status-check-modal .order-number input {
   margin-top: 10px;
   border: none;
   background-color: #fff;
