--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
 /* pages */
 @import '/public/css/pages/order-details.css';
 @import '/public/css/pages/profile.css';
+@import '/public/css/pages/faq.css';
 /* modals */
 @import '/public/css/modals/cart-modal.css';
 @import '/public/css/modals/login-modal.css';
