--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -1,1 +1,102 @@
-<h1>FAQ</h1>
+<div class="faq-section">
+  <div class="faq-list">
+    <div class="faq-item">
+      <div class="faq-item-header">
+        <span>Общие вопросы</span>
+        <span>&#8595</span>
+      </div>
+      <div class="faq-item-wrapper">
+        <div class="faq-item-content">
+          <div class="faq-block">
+            <h3>Зачем это все?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero obcaecati aliquid a rem quae ab optio
+              exercitationem numquam dolorem quo delectus, officiis consectetur tempore aspernatur voluptate laborum!
+              Recusandae, dicta vel.</p>
+          </div>
+          <div class="faq-block">
+            <h3>Главный вопрос жизни, вселенной и всего такого.</h3>
+            <p>42.</p>
+          </div>
+          <div class="faq-block">
+            <h3>Какова природа Вселенной?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero obcaecati aliquid a rem quae ab optio
+              exercitationem numquam dolorem quo delectus, officiis consectetur tempore aspernatur voluptate laborum!
+              Recusandae, dicta vel.</p>
+          </div>
+          <div class="faq-block">
+            <h3>Есть ли какое-то Высшее Существо?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero obcaecati aliquid a rem quae ab optio
+              exercitationem numquam dolorem quo delectus, officiis consectetur tempore aspernatur voluptate laborum!
+              Recusandae, dicta vel.</p>
+          </div>
+          <div class="faq-block">
+            <h3>Каково место человека во Вселенной?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero obcaecati aliquid a rem quae ab optio
+              exercitationem numquam dolorem quo delectus, officiis consectetur tempore aspernatur voluptate laborum!
+              Recusandae, dicta vel.</p>
+          </div>
+          <div class="faq-block">
+            <h3>Что такое реальность?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero obcaecati aliquid a rem quae ab optio
+              exercitationem numquam dolorem quo delectus, officiis consectetur tempore aspernatur voluptate laborum!
+              Recusandae, dicta vel.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="faq-item">
+      <div class="faq-item-header">
+        <span>Важная информация</span>
+        <span>&#8595</span>
+      </div>
+      <div class="faq-item-wrapper">
+        <div class="faq-item-content">
+          <div class="faq-block">
+            <p>
+              У Дагон Фела остров серый;<br>
+              Каджит на острове живет:<br>
+              И всем героям третьей эры<br>
+              Свои советы раздает;<br>
+              <br>
+              То про лича он сказ заводит,<br>
+              То - про Обливион;<br>
+              У гор гуар лениво бродит<br>
+              И ест траву, и счастлив он.<br>
+              <br>
+              Как Мессер скроется за тучи -<br>
+              Секунда освещает путь,<br>
+              Чтобы в ночи на всякий <br>
+              Не заблудился кто-нибудь.<br>
+              <br>
+              Гробницы там скелетов полны;<br>
+              Там лижут берег моря волны.<br>
+              <br>
+              А над Сураном на заре<br>
+              Наездник скальный заклокочет;<br>
+              Святой Джиуб прогнать их хочет;<br>
+              Смерть ищет Умбра на горе.<br>
+              <br>
+              Вдали, за Призрачным пределом,<br>
+              Бушует буря день и ночь,<br>
+              И вся земля там омертвела -<br>
+              Никто не в силах ей помочь.<br>
+              <br>
+              В высоком храме Вивек тужит,<br>
+              А ординатор верно служит;<br>
+              <br>
+              Там по фоядам средь руин<br>
+              Идет-бредет Нереварин.<br>
+              Там Сота Сил под градом чахнет;<br>
+              Там Морровинд... Там пеплом пахнет!<br>
+              <br>
+              И я там был, суджаму пил;<br>
+              В пещере видел Молаг Бала;<br>
+              Азуру в храме повстречал я;<br>
+              Её звезду я получил.<br>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
