Added category page prices spacing

--- a/views/category.hbs
+++ b/views/category.hbs
@@ -10,7 +10,7 @@
             <img src="/{{imageUrl}}" alt="{{title}}">
           </div>
           <div class="product-title">{{title}}</div>
-          <div class="product-price">{{price}}<span><img src="/public/img/bloodechoes.png" alt="bloodechoes"></span></div>
+          <div class="product-price">{{price}}</div>
           <div class="more">Подробнеe <span>&#8640;</span></div>
         </a>
         {{#if @root.isAdmin}}
