--- a/views/admin-product-add.hbs
+++ b/views/admin-product-add.hbs
@@ -37,7 +37,7 @@
           <hr>
           <div class="input-field">
             <span>Файл:</span>
-            <input id="image" name="image" type="file">
+            <input id="image" name="image" type="file" multiple>
           </div>
           <div class="input-field">
             <span></span>
